--- a/index.html
+++ b/index.html
@@ -2,24 +2,30 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>PDF Viewer</title>
+    <link rel="stylesheet" href="/dist/build.css"/>
 </head>
 
 <body class="w-screen h-screen flex p-4 bg-gray-100 border">
-    <div class="w-full h-full relative rounded-tl-xl border bg-gray-100 px-4 overflow-hidden">
-        <div id="pdf" style=" overflow: auto;
+<div class="w-full h-full relative rounded-tl-xl border bg-gray-100 px-4 overflow-hidden">
+    <div id="pdf" style=" overflow: auto;
                           position: fixed;
                           width: 100%;
                           top:0;
                           left:0;
                           z-index: 10;
                           height: 100%;">
-        </div>
     </div>
-    <script type="module" src="/main.js"></script>
+</div>
+<script type="module">
+    import {PDFViewer} from '/dist/pdf-viewer.js';
+
+    let pdfViewer = new PDFViewer(document.getElementById('pdf'))
+
+    pdfViewer.init('/readme.pdf');
+</script>
 </body>
 
 </html>
