--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>PDF Viewer</title>
-    <link rel="stylesheet" href="/dist/build.css"/>
+    <link rel="stylesheet" href="dist/build.css"/>
 </head>
 
 <body class="w-screen h-screen flex p-4 bg-gray-100 border">
@@ -20,7 +20,7 @@
     </div>
 </div>
 <script type="module">
-    import {PDFViewer} from '/dist/pdf-viewer.js';
+    import {PDFViewer} from 'dist/pdf-viewer.js';
 
     let pdfViewer = new PDFViewer(document.getElementById('pdf'))
 
