--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 </div>
 <script type="module">
-    import {PDFViewer} from 'dist/pdf-viewer.js';
+    import {PDFViewer} from './dist/pdf-viewer.js';
 
     let pdfViewer = new PDFViewer(document.getElementById('pdf'))
 
