--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     let pdfViewer = new PDFViewer(document.getElementById('pdf'))
 
-    pdfViewer.init('/readme.pdf');
+    pdfViewer.init('./readme.pdf');
 </script>
 </body>
 
