--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>PDF Viewer</title>
-    <link rel="stylesheet" href="dist/build.css"/>
 </head>
 
 <body class="w-screen h-screen flex p-4 bg-gray-100 border">
@@ -19,12 +18,16 @@
                           height: 100%;">
     </div>
 </div>
+<link rel="stylesheet" href="./dist/style.css">
 <script type="module">
     import {PDFViewer} from './dist/pdf-viewer.js';
 
-    let pdfViewer = new PDFViewer(document.getElementById('pdf'))
+    window.addEventListener('DOMContentLoaded', function () {
 
-    pdfViewer.init('./readme.pdf');
+        let pdfViewer = new PDFViewer(document.getElementById('pdf'))
+
+        pdfViewer.init('./test2.pdf');
+    })
 </script>
 </body>
 
