--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         let pdfViewer = new PDFViewer(document.getElementById('pdf'))
 
-        pdfViewer.init('./test2.pdf');
+        pdfViewer.init('./readme.pdf');
     })
 </script>
 </body>
